--- a/src/.open/css/image.scss
+++ b/src/.open/css/image.scss
@@ -24,7 +24,7 @@
   width: 100%;
   bottom: 0px;
   height: 24px;
-  background-color: #eeeeee;
+  background-color: #ffffff;
   #name{
     font-size: 16px;
     position: absolute;
