--- a/src/.open/image.haml
+++ b/src/.open/image.haml
@@ -4,7 +4,7 @@
     %meta(charset="UTF-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     %meta(name="format-detection" content="telphone=no")
-    %title image
+    %title imagee
     %link(href="css/image.css" rel="stylesheet")
   %body
     #view
