--- a/src/.open/image.haml
+++ b/src/.open/image.haml
@@ -4,11 +4,18 @@
     %meta(charset="UTF-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     %meta(name="format-detection" content="telphone=no")
-    %title imagee
+    %title image
     %link(href="css/image.css" rel="stylesheet")
   %body
+    #touch
+      #left
+        #leftCenter
+      #right
+        #rightCenter
     #view
       #stage
       #curtain
         %span#name 文件名
+        #number 0/0
+        %img#more-vert(src="./img/more_vert.png" )
   %script(src="js/image/image.js")
