--- a/src/index.haml
+++ b/src/index.haml
@@ -9,7 +9,7 @@
   %body
     #top
       %img#menu(src="./.src/img/menu.png" )
-      %span#title 测试标题
+      %span#title 标题
       %img#search(src="./.src/img/search.png" )
     #aside
       .welcome
