--- a/src/.open/css/audio.scss
+++ b/src/.open/css/audio.scss
@@ -18,3 +18,11 @@
     padding: 4px;
   }
 }
+#play{
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+#audio{
+//  display: none;
+}
