--- a/src/index.haml
+++ b/src/index.haml
@@ -9,21 +9,26 @@
   %body
     #top
       %img#menu(src="./.src/img/menu.png" )
-      %span#title 标题
-      %img#search(src="./.src/img/search.png" )
+      %span#title 当前路径
     #aside
       .welcome
         %span设置
       .config
-        %label(for="config-hide" ) 显示隐藏文件
+        %label(for="config-hide").label-text 显示隐藏文件
         %input#config-hide.checkbox(type="checkbox" checked="")
+        .checkbox-wrapper
+          %label.checkbox-label(for="config-hide")
       .config#config-floatButton
-        %label(for="config-hide" ) 显示浮动按钮
+        %label(for="config-FB").label-text 显示浮动按钮
         %input#config-FB.checkbox(type="checkbox" checked="checked")
+        .checkbox-wrapper
+          %label.checkbox-label(for="config-FB")
       .config#config-clean
-        %label 清除本地数据
+        %label.label-text 清除本地数据
+      .config#config-load
+        %label.label-text 手动刷新文件(IOS&WP)
     #article
       .down
-        %img(src="./.src/img/down.png" )
-        %span 下拉刷新
+        %img#refresh-img(src="./.src/img/down.png" )
+        %span#refresh-text 下拉刷新
   %script(src="./.src/js/index.js")
